--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,8 +1,6 @@
 ---
 title: WM Spina Bifida
 ---
-<%= link_to 'community', '/views/community.html' %>
-<%= link_to 'Truth', '/views/truth.html' %>
 <%#= image_tag 'images/bg.png' %>
 
 <div id="wrap">
@@ -23,18 +21,8 @@ title: WM Spina Bifida
               <a href="#" class="dropdown-toggle" data-toggle="dropdown"></a>
             </h3>
             <ul class="dropdown-menu">
-              <li>
-                <a href="#">Link</a>
-              </li>
-              <li>
-                <a href="#">Link</a>
-              </li>
-              <li>
-                <a href="#">Link</a>
-              </li>
-              <li>
-                <a href="#">Link</a>
-              </li>
+              <li><%= link_to 'community', '/views/community.html' %></li>
+              <li><%= link_to 'Truth', '/views/truth.html' %></li>
             </ul>
           </div>
         </div>
