--- a/source/stylesheets/html5boilerplate/_main.css.scss
+++ b/source/stylesheets/html5boilerplate/_main.css.scss
@@ -1,10 +1,10 @@
 // converted from HTML5 Boilerplate - pre-release w/ normalization - 06/28/11
 
 // Default colors
-// $h5bp-text-selection: rgba(0, 0, 0, 0) !default;
-// $h5bp-webkit-tap: #ff5e99 !default;
-// $h5bp-link: #0000ee !default;
-// $h5bp-visited-link: #551a8b !default;
+$h5bp-text-selection: rgba(0, 0, 0, 0) !default;
+$h5bp-webkit-tap: #ff5e99 !default;
+$h5bp-link: #0000ee !default;
+$h5bp-visited-link: #551a8b !default;
 
 // HTML5 ✰ Boilerplate
 //
