--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -11,6 +11,7 @@
 
     <%= stylesheet_link_tag "normalize", "style" %>
     <%= javascript_include_tag  "all" %>
+    <link href='http://fonts.googleapis.com/css?family=Raleway:300,700,400' rel='stylesheet' type='text/css'>
   </head>
 
   <body class="<%= page_classes %>">
