--- a/source/stylesheets/style.css.scss
+++ b/source/stylesheets/style.css.scss
@@ -1,3 +1,7 @@
+
+// customize bootstrap variables here:
+@import "bootstrap";
+
 @import "compass";
 
 // HTML5 Boilerplate Colors - uncomment to use
@@ -5,8 +9,11 @@ $h5bp-text-selection: rgba(0, 0, 0, 0);
 $h5bp-webkit-tap: #ff5e99;
 $h5bp-link: #0000ee;
 $h5bp-visited-link: #551a8b;
+$raleway: 'Raleway', 'sans-serif';
 
 @import "html5boilerplate/main";
+
+
 
 // 960.gs Grid System - uncomment to use
 //  don't forget to uncomment the "require 'ninesixty'" line in config.rb!
