Updated source and added copy

--- a/source/views/community.html.erb
+++ b/source/views/community.html.erb
@@ -1,43 +1,40 @@
 ---
 title: Community (REMOVE: Our Community)
+
 ---
-
-<h1>Our Community</h1>
-
-<h2>Who We Are</h2>
-<p>WM Spina Bifida is a support system for families living with spina bifida.</p>
-
-<h2>Partners</h2>
-<p>We are proud to partner with a variety of West Michigan organizations.</p>
-
-<h2>Membership</h2>
-<p>We are stronger together. Let us help you through the “now what.”</p>
-
-<section id="(Who We Are)">
-  <p>Our Board of Directors focuses on ways to help those living with spina bifida in West Michigan. We meet throughout the year to plan events like our Annual Stroll N Roll, foster community and advocate for awareness in the West Michigan region.</p>
-[board pictures, names & title]
+<section id="(What Now)">
+<h1>What now?</h1>
+<span>
+<p>Member Benefits</p>
+<p>Aximil milibus ulpa velent venem fugitatem laut adis nonet am fuga.</p>
+<p>Community Resources</p>
+<p>Aximil milibus ulpa velent venem fugitatem laut adis nonet am fuga. </p>
+<p>Learning opportunities</p>
+<p>Aximil milibus ulpa velent venem fugitatem laut adis nonet am fuga. </p>
+</span>
 </section>
 
-<section id="(Partners)">
-  <ul>
-    <li>Mary Free Bed Foundation (logo)</li>
-    <li>Helen DeVos Children’s Hospital (logo)</li>
-    <li>Family Hope Foundation (listed)</li>
-    <li>University of Michigan (logo)</li>
-  </ul>
+<section id="Slider-Two">
+<ul>
+<li>
+<h2>Meet Grayson</h2>
+<p>Is quiatiae nus name num fugit exerum facerum quis ad evendae eaquo doluptatum verrovit omnimporpori nonsersped molorit, as adi omnist providel in nos et ommo dolesectis di quibus.
+Ullorat voluptu saeperem aut etur, vent alibus estiiscient hitatib uscide repel incillaccus reptiatiandi dolum.</p>
+</li>
+</ul>
+    
+<ul>
+<li>
+<h2>Meet Grayson</h2>
+<p>Subhead
+Wir bieten Ihnen handverlesene und exklusive Unterkünfte an den schönsten Orten der Welt. Wir bieten Ihnen handverlesene und exklusive Unterkünfte an den schönsten Orten der Welt.</p>
+</li>
+</ul>
 </section>
 
-<section id="(Membership)">
-  <h2>Letter from the Board</h2>
-  <p>Our parents are down to earth and friendly. Each member is full of personality and contributes to the dynamic of the group. We rely on each other for advice and encouragement, knowing that every parent has a “now what” in front of them that another member has already been through.</p>
-  <p>As a member you have access to a wide variety of resources, discounts and scholarships.</p>
-  <p>We would love to share our lives with you to!</p>
-  <div>[Benefits]</div>
-  <div>[Join Us]</div>
+<section id="(Stroll)">
+<img src="">
 </section>
-
-
-
 
 
 
