--- a/source/views/contact.html.erb
+++ b/source/views/contact.html.erb
@@ -1,3 +1,20 @@
 ---
 title: Contact.html.erb
 ---
+
+
+<section id="(Contact)">
+<h2>Get in touch</h2>
+<p>We are always looking for new resources, programs & events that will enhance the lives of the West Michigan Spina Bifida community.</p>
+<p>West Michigan Spina Bifida Organization</p>
+<p>235 Wealthy SE</p>
+<p>Grand Rapids, MI 49503</p>
+    
+<form action="" method="post">
+<p>Your name</p><input type="text" value="" name="Name" id="Name">
+<p>Email address</p><input type="text" value="" name="Email" id="Email">
+<p>Message</p><textbox col="" row="" name="Message" id="Message"></textbox>
+<input type="submit" value="submit">   
+</form>
+<img src="">
+</section>
