--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -7,11 +7,10 @@
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
 
     <!-- Use title if it's in the page YAML frontmatter -->
-    <title><%= current_page.data.title || "The Middleman" %></title>
+    <title><%#= current_page.data.title || "The Middleman" %></title>
 
-    <%= stylesheet_link_tag "normalize", "style" %>
+    <%= stylesheet_link_tag "normalize", "all" %>
     <%= javascript_include_tag  "all" %>
-    <link href='http://fonts.googleapis.com/css?family=Raleway:300,700,400' rel='stylesheet' type='text/css'>
   </head>
 
   <body class="<%= page_classes %>">
