--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,303 +1,61 @@
 ---
 title: WM Spina Bifida
 ---
-<%#= image_tag 'images/bg.png' %>
-
 <div id="wrap">
-  <header class="masthead">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-6">
-          <h1>
-            <a href="#" title="Bootstrap Template">Happy Scroll</a>
-          </h1>
-        </div>
-        <div class="col-sm-6">
-          <div class="pull-right hidden-xs">
-            <ul class="dropdown-menu">
-              <li><%= link_to 'community', '/views/community.html' %></li>
-              <li><%= link_to 'Truth', '/views/truth.html' %></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-  </header><!-- Fixed navbar -->
-  <div class="navbar navbar-custom navbar-inverse navbar-static-top" id="nav">
-    <div class="container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"></button>
-      </div>
-      <div class="collapse navbar-collapse">
-        <ul class="nav navbar-nav nav-justified">
-          <li>
-            <a href="#">Home</a>
-          </li>
-          <li>
-            <a href="#section2">Product</a>
-          </li>
-          <li>
-            <a href="#section3">News</a>
-          </li>
-          <li class="active">
-            <a href="#section1"><strong>Big Brand</strong></a>
-          </li>
-          <li>
-            <a href="#section4">About</a>
-          </li>
-          <li>
-            <a href="#section5">Contact</a>
-          </li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">More</a>
-            <ul class="dropdown-menu">
-              <li>
-                <a href="#">Action</a>
-              </li>
-              <li>
-                <a href="#">Another action</a>
-              </li>
-              <li>
-                <a href="#">Something else here</a>
-              </li>
-              <li>
-                <a href="#">Separated link</a>
-              </li>
-              <li>
-                <a href="#">One more separated link</a>
-              </li>
-            </ul>
-          </li>
-        </ul>
-      </div><!--/.nav-collapse -->
-    </div><!--/.container -->
-  </div><!--/.navbar -->
-  <!-- Begin page content -->
-  <div class="divider" id="section1"></div>
-  <div class="container">
-    <div class="col-sm-10 col-sm-offset-1">
-      <div class="page-header text-center">
-        <h1>
-          Sticky Footer with Fly-in Navbar
-        </h1>
-      </div>
-      <p class="lead text-center">
-        Twitter Bootstrap is a front-end toolkit to rapidly build web applications.
-      </p>
-      <p class="text-center">
-        Bootstrap is a framework that uses some of the latest browser techniques to provide you with stylish typography, navigation, buttons, tables, etc. One of the primary changes in Bootstrap 3 is an emphasis on Mobile-First responsive design. The goal is to elevate the mobile experience to a first-class citizen of the design process, because several billion mobile users is quite a large market to tap into. So, sites built with the current Bootstrap version target mobile devices and scale for larger screens depending on screen size.
-      </p>
-    </div>
-  </div>
-  <div class="divider" id="section2"></div>
-  <section class="bg-1">
+  <%= partial "/views/navigation_primary" %>
+
+  <section class="masthead">
     <div class="col-sm-6 col-sm-offset-3 text-center">
-      <h2 style="padding:20px;background-color:rgba(5,5,5,.8)">
-        Try and Tweak Different Layouts
-      </h2>
-    </div>
-  </section>
-  <div class="divider"></div>
-  <div class="container" id="section3">
-    <div class="col-sm-8 col-sm-offset-2 text-center">
       <h1>
-        Mobile-first + Responsive
+        <small>We are not a cause.</small>
+        <br/>We are a community.
       </h1>
-      <p>
-        Instead of creating a unique version of the webpage for each desktop, mobile &amp; tablet, you can now create one design that works on all devices, browsers &amp; resolutions. Your designs will be future ready when a new table or phone size comes in the market, your designs will adapt itself and fit to the new screen size.
-      </p>
-      <hr>
-      <img src="/assets/example/bg_smartphones.jpg" class="img-responsive">
-      <hr>
-    </div><!--/col-->
-  </div><!--/container-->
-  <div class="divider"></div>
-  <section class="bg-3" id="section4">
-    <div class="col-sm-6 col-sm-offset-3 text-center">
-      <h2 style="padding:20px;background-color:rgba(5,5,5,.8)">
-        Leverage Snippets &amp; Examples
-      </h2>
     </div>
   </section>
-  <div class="continer bg-4">
+
+  <%= partial "/views/carousel_1" %>
+
+  <div class="container-fluid">
     <div class="row">
-      <div class="col-sm-4 col-xs-6">
-        <div class="panel panel-default">
-          <div>
-            <img src="//placehold.it/450X250/565656/eee" class="img-responsive">
-          </div>
-          <div class="panel-body">
-            <p class="lead">
-              Hacker News
-            </p>
-            <p>
-              120k Followers, 900 Posts
-            </p>
-            <p>
-              <img src="https://lh4.googleusercontent.com/-9Yw2jNffJlE/AAAAAAAAAAI/AAAAAAAAAAA/u3WcFXvK-g8/s28-c-k-no/photo.jpg" width="28px" height="28px">
-            </p>
-          </div>
-        </div><!--/panel-->
-      </div><!--/col-->
-      <div class="col-sm-4 col-xs-6">
-        <div class="panel panel-default">
-          <div class="panel-thumbnail">
-            <img src="//placehold.it/450X250/ffcc33/444" class="img-responsive">
-          </div>
-          <div class="panel-body">
-            <p class="lead">
-              Bootstrap Templates
-            </p>
-            <p>
-              902 Followers, 88 Posts
-            </p>
-            <p>
-              <img src="https://lh5.googleusercontent.com/-AQznZjgfM3E/AAAAAAAAAAI/AAAAAAAAABA/WEPOnkQS_20/s28-c-k-no/photo.jpg" width="28px" height="28px">
-            </p>
-          </div>
-        </div><!--/panel-->
-      </div><!--/col-->
-      <div class="col-sm-4 col-xs-6">
-        <div class="panel panel-default">
-          <div class="panel-thumbnail">
-            <img src="//placehold.it/450X250/f16251/444" class="img-responsive">
-          </div>
-          <div class="panel-body">
-            <p class="lead">
-              Social Media
-            </p>
-            <p>
-              19k Followers, 789 Posts
-            </p>
-            <p>
-              <img src="https://lh4.googleusercontent.com/-eSs1F2O7N1A/AAAAAAAAAAI/AAAAAAAAAAA/caHwQFv2RqI/s28-c-k-no/photo.jpg" width="28px" height="28px"> <img src="https://lh4.googleusercontent.com/-9Yw2jNffJlE/AAAAAAAAAAI/AAAAAAAAAAA/u3WcFXvK-g8/s28-c-k-no/photo.jpg" width="28px" height="28px">
-            </p>
-          </div>
-        </div><!--/panel-->
+      <div class="col-sm-10 col-sm-offset-1">
+        <blockquote>
+          <p>The biggest misconception is that life is hard. And it’s not. That we’re sad. And we’re not."</p>
+          <footer><cite title="Source Title">Leigh, Greyson's Mom</cite></footer>
+        </blockquote>
       </div><!--/col-->
     </div><!--/row-->
   </div><!--/container-->
-  <div class="divider" id="section5"></div>
-  <div class="row">
-    <h1 class="text-center">
-      Where In The World?
-    </h1>
-    <div id="map-canvas"></div>
-    <hr>
-    <div class="col-sm-8">
-      <div class="row form-group">
-        <div class="col-xs-3">
-          <input type="text" class="form-control" id="firstName" name="firstName" placeholder="First Name" required="">
-        </div>
-        <div class="col-xs-3">
-          <input type="text" class="form-control" id="middleName" name="firstName" placeholder="Middle Name" required="">
-        </div>
-        <div class="col-xs-4">
-          <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Last Name" required="">
-        </div>
-      </div>
-      <div class="row form-group">
-        <div class="col-xs-5">
-          <input type="email" class="form-control" name="email" placeholder="Email" required="">
-        </div>
-        <div class="col-xs-5">
-          <input type="email" class="form-control" name="phone" placeholder="Phone" required="">
-        </div>
-      </div>
-      <div class="row form-group">
-        <div class="col-xs-10">
-          <input type="homepage" class="form-control" placeholder="Website URL" required="">
-        </div>
-      </div>
-      <div class="row form-group">
-        <div class="col-xs-10">
-          <button class="btn btn-default pull-right">Contact Us</button>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-3 pull-right">
-      <address>
-        <strong>Iatek, LLC.</strong><br>
-        795 Folsom Ave, Suite 600<br>
-        Newport, RI 94107<br>
-        P: (123) 456-7890
-      </address>
-      <address>
-        <strong>Email Us</strong><br>
-        <a href="mailto:#">first.last@example.com</a>
-      </address>
-    </div>
-  </div><!--/row-->
-  <div class="container">
-    <div class="col-sm-8 col-sm-offset-2 text-center">
-      <h2>
-        Beautiful Bootstrap Templates
-      </h2>
-      <hr>
-      <h4>
-        We love templates. We love Bootstrap.
-      </h4>
-      <p>
-        Get more free templates like this at the <a href="http://bootply.com">Bootstrap Playground</a>, Bootply.
+
+  <%= partial "views/article_1" %>
+
+  <%= partial "views/carousel_2" %>
+
+  <div class="snippet-block">
+    <div class="row">
+      <h1 class="col-sm-5 col-xs-12">Roll with us.</h1>
+      <p class="col-sm-7 col-xs-12">
+        Every year we host a family friendly event built to raise awareness about spina bifida and to celebrate those living with it.
+        <br /> <strong><%= link_to 'Learn more about Roll N’ Stroll', 'http://wmspinabifida.org/strollnroll/Home.html' %></strong>
       </p>
-      <hr>
-      <ul class="list-inline center-block">
-        <li>
-          <a href="http://facebook.com/bootply"><img src="/assets/example/soc_fb.png"></a>
-        </li>
-        <li>
-          <a href="http://twitter.com/bootply"><img src="/assets/example/soc_tw.png"></a>
-        </li>
-        <li>
-          <a href="http://google.com/+bootply"><img src="/assets/example/soc_gplus.png"></a>
-        </li>
-        <li>
-          <a href="http://pinterest.com/in1"><img src="/assets/example/soc_pin.png"></a>
-        </li>
-      </ul>
-    </div><!--/col-->
+    </div><!--/row-->
   </div><!--/container-->
+
+  <%= partial "views/article_2" %>
+
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-sm-10 col-sm-offset-1">
+        <blockquote>
+          <p>At first, I worried about what Grayden would take away from our lives. I never
+could have imagined how much he would add.”</p>
+          <footer id="act"><cite title="Source Title">Kelly, Parent Grayden's Mom</cite></footer>
+        </blockquote>
+      </div><!--/col-->
+    </div><!--/row-->
+  </div><!--/container-->
+
+  <%= partial "views/article_3" %>
 </div><!--/wrap-->
-<div id="footer">
-  <div class="container">
-    <p class="text-muted">
-      This Bootstrap Example courtesy <a href="http://www.bootply.com">Bootply.com</a>
-    </p>
-  </div>
-</div>
-<ul class="nav pull-right scroll-top">
-  <li>
-    <a href="#" title="Scroll to top"></a>
-  </li>
-</ul><script type='text/javascript' src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js">
-</script><script type='text/javascript' src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js">
-</script><script type='text/javascript' src="http://maps.googleapis.com/maps/api/js?sensor=false&amp;extension=.js&amp;output=embed">
-</script><!-- JavaScript jQuery code from Bootply.com editor -->
 
+<%= partial "views/footer" %>
 
-<script type='text/javascript'>
-
-$(document).ready(function() {
-  /* affix the navbar after scroll below header */
-  $('#nav').affix({
-    offset: {
-      top: $('header').height()-$('#nav').height()
-    }
-  });
-
-  /* highlight the top nav as scrolling occurs */
-  $('body').scrollspy({ target: '#nav' })
-
-  /* smooth scrolling for scroll to top */
-  $('.scroll-top').click(function(){
-    $('body,html').animate({scrollTop:0},1000);
-  })
-
-  /* smooth scrolling for nav sections */
-  $('#nav .navbar-nav li>a').click(function(){
-    var link = $(this).attr('href');
-    var posi = $(link).offset().top+20;
-    $('body,html').animate({scrollTop:posi},700);
-  })
-});
-</script>
