Updated Content in Top Nav and article active indicators

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,10 +1,13 @@
 ---
 title: WM Spina Bifida
 ---
-<div id="wrap">
+
+
+<div class="sections-wrapper">
   <%= partial "/views/navigation_primary" %>
 
   <section class="masthead">
+    <%= partial "/components/hr_divider_mini" %>
     <div class="col-sm-6 col-sm-offset-3 text-center">
       <h1>
         <small>We are not a cause.</small>
@@ -46,8 +49,7 @@ title: WM Spina Bifida
     <div class="row">
       <div class="col-sm-10 col-sm-offset-1">
         <blockquote>
-          <p>At first, I worried about what Grayden would take away from our lives. I never
-could have imagined how much he would add.”</p>
+          <p>At first, I worried about what Grayden would take away from our lives. I never could have imagined how much he would add.”</p>
           <footer id="act"><cite title="Source Title">Kelly, Parent Grayden's Mom</cite></footer>
         </blockquote>
       </div><!--/col-->
@@ -55,7 +57,7 @@ could have imagined how much he would add.”</p>
   </div><!--/container-->
 
   <%= partial "views/article_3" %>
-</div><!--/wrap-->
+</div><!--/wrapper-->
 
 <%= partial "views/footer" %>
 
