--- a/source/views/_article_1.html.erb
+++ b/source/views/_article_1.html.erb
@@ -2,7 +2,7 @@
   <span class="blank-hr"></span>
 </div>
 
-<section class="exploring">
+<section class="exploring article">
   <div class="section-header">
     <div class="container-fluid">
       <div class="row">
