--- a/source/views/_article_3.html.erb
+++ b/source/views/_article_3.html.erb
@@ -2,7 +2,7 @@
   <span class="blank-hr"></span>
 </div>
 
-<section class="caring">
+<section class="caring article">
   <div class="section-header">
     <div class="container-fluid">
       <div class="row">
@@ -78,7 +78,8 @@
 
       <div class="tab-pane fade" id="hello">
         <h2>Say Hello</h2>
-        <p></p>
+        <p>You can reach us through the e-mail address wmisbo@gmail.com.</p>
+        <p>We welcome your communication with our association. We are always looking for new resources, programs & events that will enhance the lives of the West Michigan Spina Bifida community.</p>
       </div>
     </div><!--/container-->
   </div>
