--- a/source/views/_footer.html.erb
+++ b/source/views/_footer.html.erb
@@ -1,8 +1,4 @@
-<div class="divider-mini">
-  <span class="color-hr red"></span>
-  <span class="color-hr green"></span>
-  <span class="color-hr blue"></span>
-</div>
+<%= partial "/components/hr_divider_mini" %>
 
 <footer class="page-footer container-fluid">
   <div class="row">
