--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -5,7 +5,7 @@
 
     <!-- Always force latest IE rendering engine or request Chrome Frame -->
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Use title if it's in the page YAML frontmatter -->
     <title><%= current_page.data.title || "The Middleman" %></title>
     <link href='http://fonts.googleapis.com/css?family=Raleway:300,700,400' rel='stylesheet' type='text/css'>
@@ -14,32 +14,9 @@
 
   <body class="<%= page_classes %>">
     <%= yield %>
-    <script type='text/javascript' src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js">
-    </script><script type='text/javascript' src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script><!-- JavaScript jQuery code from Bootply.com editor -->
-    <script type='text/javascript'>
-      $(document).ready(function() {
-        /* affix the navbar after scroll below header */
-        $('#nav').affix({
-          offset: {
-            top: $('header').height()-$('#nav').height()
-          }
-        });
-
-        /* highlight the top nav as scrolling occurs */
-        $('body').scrollspy({ target: '#nav' })
-
-        /* smooth scrolling for scroll to top */
-        $('.scroll-top').click(function(){
-          $('body,html').animate({scrollTop:0},1000);
-        })
-
-        /* smooth scrolling for nav sections */
-        $('#nav .navbar-nav li>a, .nav-item a').click(function(){
-          var link = $(this).attr('href');
-          var posi = $(link).offset().top-30;
-          $('body,html').animate({scrollTop:posi},700);
-        })
-      });
-    </script>
+    <script type='text/javascript' src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script type='text/javascript' src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
+    <!-- JavaScript jQuery code from Bootply.com editor -->
+    <%= javascript_include_tag 'all' %>
   </body>
 </html>
