--- a/source/views/_navigation_primary.html.erb
+++ b/source/views/_navigation_primary.html.erb
@@ -1,28 +1,20 @@
-<div class="navbar navbar-custom navbar-inverse navbar-static-top" id="nav">
-
+<div class="header-nav" id="navbar">
   <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"></button>
+    <h1 class="main-identity scroll-top">
+      <%= link_to 'West Michigan Spina Bifida Organization', '#', :title => "top" %>
+    </h1>
+
+    <div class="navbar-trigger-container">
+      <%= link_to '', '#', :'data-toggle' => "collapse", :'data-target' => ".navbar-container", :class => "navbar-trigger fa fa-bars" %>
     </div>
 
-    <div class="collapse navbar-collapse">
-      <ul class="nav navbar-nav">
-        <li class="nav-home scroll-top">
-          <%= link_to 'West Michigan Spina Bifida Organization', '#', :title => "top" %>
-        </li>
-      </ul>
-      <ul class="main-menu nav navbar-nav">
+    <div class="navbar-container collapse">
+      <ul class="nav-items nav">
         <li class="nav-item"><%= link_to 'Spina Bifida Is', '#learn' %></li>
         <li class="nav-item"><%= link_to 'Now What', '#act' %></li>
         <li class="nav-item"><%= link_to 'Our Community', '#community' %></li>
         <li class="nav-item"><%= link_to 'Get Involved', '#involved' %></li>
       </ul>
-    </div><!--/.nav-collapse -->
+    </div><!--/.nav-container -->
   </div><!--/.container -->
 </div><!--/.navbar -->
-
-<div class="divider-mini header">
-  <span class="color-hr red"></span>
-  <span class="color-hr green"></span>
-  <span class="color-hr blue"></span>
-</div>
