@WIP - Updated Content

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,7 +2,6 @@
 title: WM Spina Bifida
 ---
 
-
 <div class="sections-wrapper">
   <%= partial "/views/navigation_primary" %>
 
@@ -21,10 +20,12 @@ title: WM Spina Bifida
   <div class="container-fluid">
     <div class="row">
       <div class="col-sm-10 col-sm-offset-1">
-        <blockquote>
-          <p>The biggest misconception is that life is hard. And it’s not. That we’re sad. And we’re not."</p>
-          <footer><cite title="Source Title">Leigh, Greyson's Mom</cite></footer>
-        </blockquote>
+          <blockquote>
+            <div class="quote-wrapper">
+              <p>The biggest misconception is that life is hard. And it’s not. That we’re sad. And we’re not.</p>
+            </div>
+            <footer><cite title="Source Title">Leigh, Greyson's Mom</cite></footer>
+          </blockquote>
       </div><!--/col-->
     </div><!--/row-->
   </div><!--/container-->
@@ -49,8 +50,10 @@ title: WM Spina Bifida
     <div class="row">
       <div class="col-sm-10 col-sm-offset-1">
         <blockquote>
-          <p>At first, I worried about what Grayden would take away from our lives. I never could have imagined how much he would add.”</p>
-          <footer id="act"><cite title="Source Title">Kelly, Parent Grayden's Mom</cite></footer>
+          <div class="quote-wrapper">
+            <p>At first, I worried about what Grayden would take away from our lives. I never could have imagined how much he would add.</p>
+            <footer id="act"><cite title="Source Title">Kelly, Parent Grayden's Mom</cite></footer>
+          </div>
         </blockquote>
       </div><!--/col-->
     </div><!--/row-->
