--- a/source/views/_footer.html.erb
+++ b/source/views/_footer.html.erb
@@ -4,8 +4,8 @@
   <div class="row">
     <div class="col-sm-4 col-xs-12">
       <span>West Michigan Spina Bifida Organization</span>
-      <span>235 Wealthy SE</span
-      <span>Grand Rapids, MI 4903</span>
+      <br /><span>235 Wealthy SE</span>
+      <br /><span>Grand Rapids, MI 4903</span>
     </div>
 
     <ul class="col-sm-4 col-xs-12">
@@ -22,6 +22,6 @@
   </div>
 
   <div class="row">
-    <p class="page_disclosure">&copy; 2012 West Michigan Spina Bifida Organization.</p>
+    <p class="col-xs-12 page_disclosure">&copy; 2012 West Michigan Spina Bifida Organization.</p>
   </div>
 </footer>
