--- a/source/views/_article_1.html.erb
+++ b/source/views/_article_1.html.erb
@@ -12,17 +12,7 @@
 
       <!-- Nav tabs -->
       <ul class="nav section-nav row">
-        <li class="active section-nav-item col-sm-4 col-xs-12">
-          <% link_to '#member', "data-toggle" => "tab" do %>
-            <span class="boundary-box">
-              <strong>Spina Bifida Is</strong>
-              <span class="section-nav-item-detail">Join our community and access a wide range of benefits for you and your child.</span>
-            </span>
-            <span class="tab-indicator"></span>
-          <% end %>
-        </li>
-
-        <li class="col-sm-4 section-nav-item col-xs-12">
+        <li class="active col-sm-4 section-nav-item col-xs-12">
           <span class="clearfix visible-xs"></span>
           <% link_to '#community_resources', "data-toggle" => "tab" do %>
             <span class="boundary-box">
@@ -49,60 +39,7 @@
 
   <div class="info-content-container">
     <div class="container-fluid tab-content">
-      <div class="tab-pane fade in active" id="member">
-        <h2>Member Benefits</h2>
-        <ul class="information-roll">
-          <li>
-            <h3>Scholarships</h3>
-            <ul>
-              <li><%= link_to 'Camp', 'https://docs.google.com/forms/d/1kQ4OVpSsF9RAD6JEJCr9PLPH8d-mlhMwXO2sP0t49HI/viewform?usp=send_form' %> (due May 15, 2014)</li>
-              <li><%= link_to 'SB National Conference', 'https://docs.google.com/forms/d/19gTldB6AJR-wYtIuac9c9hAb2JTMRhlTnoKBlMe50cs/viewform?usp=send_form' %> (due May 15, 2014)</li>
-              <li><%= link_to 'Therapy', 'http://www.familyhopefoundation.org/programs/scholorships/guidelines-application' %> (due April 1 and Oct 1)</li>
-            </ul>
-          </li>
-
-          <li>
-            <h3>U of M Research Project</h3>
-          </li>
-
-          <li>
-            <h3>Member Discounts</h3>
-            <ul>
-              <li>Coloplast</li>
-              <li>Airway</li>
-              <li>Wright &amp; Filipis</li>
-              <li>Pediatric Orthotic Specialists</li>
-            </ul>
-          </li>
-
-          <li>
-            <h3>Events</h3>
-          </li>
-
-          <li>
-            <h3>Monthly Support Group</h3>
-          </li>
-
-          <li>
-            <h3>Member Directory</h3>
-          </li>
-
-          <li>
-            <h3>Community of Support</h3>
-            <ul>
-              <li><%= link_to 'Emily, Nate &amp; Carson', 'http://babyboybush.blogspot.com' %></li>
-              <li><%= link_to 'Andy, Leigh  &amp; Greyson', 'http://ourlittlegibblet.blogspot.com' %></li>
-              <li><%= link_to 'Kelly, Austin &amp; Grayden', 'http://ourredirectedflight.blogspot.com' %></li>
-              <li><%= link_to 'Kevin, Katie &amp; Gibson', 'http://alistmakerslife.com' %></li>
-              <li><%= link_to 'Dave, Lauren &amp; Ezra', 'http://hannonfamilyblessings.blogspot.com' %></li>
-              <li><%= link_to 'Coleman, Lauren &amp; Lewis', 'http://thelittlemiller.blogspot.com' %></li>
-              <li><%= link_to 'Dawn, Tom &amp; Andy', 'http://themathewschildren.blogspot.com' %></li>
-            </ul>
-          </li>
-        </ul>
-      </div>
-
-      <div class="tab-pane fade" id="community_resources">
+      <div class="tab-pane fade in active" id="community_resources">
         <h2>Community Resources</h2>
         <ul class="information-roll">
           <li>
@@ -200,7 +137,7 @@
             </div>
 
             <p>
-              Mary Jo is a member of our board of directors and is located in Zeeland, Michigan. She would be happy to provide further information regarding Special Needs Trusts and whether such a trust is appropriate for you and your family.
+              An estate planning attorney could provide further information regarding Special Needs Trusts and whether such a trust is appropriate for you and your family.  They would be happy to provide further information regarding Special Needs Trusts and whether such a trust is appropriate for you and your family.
             </p>
           </li>
 
